--- a/git2.css
+++ b/git2.css
@@ -47,8 +47,8 @@ html{background-color:rgb(23,23,24);
      }
 body{background-color:rgb(23,23,24);
 }
-#What{width:25%,
-      height:25%
+#What{width:25%;
+      height:25%;
       }
 #Learn{font-size:200px;
        color:rgb(255,255,255);
