--- a/git2.css
+++ b/git2.css
@@ -47,14 +47,15 @@ html{background-color:rgb(23,23,24);
      }
 body{background-color:rgb(23,23,24);
 }
-#What{width:5px;
-      height:5px;
+#What{width:100%;
+      height:100%;
+      text-align:center;
       }
-#Learn{font-size:0.5px;
+#Learn{font-size:200px;
        color:rgb(255,255,255);
        text-align:center;
        }
-p{font-size:0.5px; 
+p{font-size:100px; 
   text-align:center;
   color:rgb(255,255,255);
 }
