--- a/git1.css
+++ b/git1.css
@@ -31,10 +31,9 @@ ul{border-bottom-style:solid;
    padding-bottom:10px;
    position:sticky;
    }
-#link{text-decoration:none;}
-#paragraph{font-size:15px;
+#link:hover{font-color:rgb(23,21,2);}
+#paragraph{font-size:20px;
            font-color:rgb(0,0,0);}
-
 #head{width:100%;
       height:100%;
      background-image:url('twilight.jpg');
@@ -55,7 +54,7 @@ body{background-color:rgb(23,23,24);
    background-color:rgb(255,255,255);
    width:50%;
    height:50%;
-   margin:left;
+   margin:auto;
    margin-top:100px;
    }
 
@@ -65,7 +64,7 @@ body{background-color:rgb(23,23,24);
    background-color:rgb(255,255,255);
    width:50%;
    height:50%;
-   margin:left;
+   margin:auto;
    margin-top:100px;
   }
 
