--- a/git1.css
+++ b/git1.css
@@ -52,7 +52,7 @@ body{background-color:rgb(23,23,24);
    border-width:thick;
    border-radius:15px;
    background-color:rgb(255,255,255);
-   width:100;
+   width:100%;
    height:100%;
    margin:auto;
    margin-top:100px;
