--- a/git1.css
+++ b/git1.css
@@ -48,7 +48,8 @@ html{background-color:rgb(23,23,24);
      }
 body{background-color:rgb(23,23,24);
 }
-#x{border-style:solid;
+
+#Project-UK-annual-growth-2013-2018 {border-style:solid;
    border-width:thick;
    border-radius:15px;
    background-color:rgb(255,255,255);
@@ -57,25 +58,11 @@ body{background-color:rgb(23,23,24);
    margin:auto;
    margin-top:100px;
    }
-
-#ebayscraping{border-style:solid;
-   border-width:thick;
-   border-radius:15px;
-   background-color:rgb(255,255,255);
-   width:100%;
-   height:100%;
-   margin:auto;
-   margin-top:100px;
-  }
-
-#x h2{text-align:center;}
-#x img{display:block;
+#Project-UK-annual-growth-2013-2018 h2{text-align:center;}
+#Project-UK-annual-growth-2013-2018 img{display:block;
        margin:auto;
        }
-#ebayscraping img{margin:auto;
-       display:block;
-       }
-#ebayscraping h2{text-align:center;}
+
 
 #Floyd-algorithm{border-style:solid;
      border-width:thick;
