--- a/git2.css
+++ b/git2.css
@@ -10,7 +10,6 @@
        font-family:"Lucida Console", Monaco, monospace;
        font-size:100px;
      }
-}
 
 a{text-decoration:none;}
 li {display:inline;
@@ -23,10 +22,14 @@ li {display:inline;
 }
 li a{color:rgb(255,255,255);
      text-decoration:none;}
+
 li a:hover{
     color:rgb(0,0,0);
     background-color:rgb(255,255,255);
 }
+
+
+
 ul{border-bottom-style:solid;
    border-bottom-color:rgb(255,255,255);
    padding-bottom:10px;
@@ -47,11 +50,11 @@ html{background-color:rgb(23,23,24);
      }
 body{background-color:rgb(23,23,24);
 }
-#What{width:100%;
+#MAIN{width:100%;
       height:100%;
       text-align:center;
       }
-#Learn{font-size:200px;
+#QUESTION{font-size:200px;
        color:rgb(255,255,255);
        text-align:center;
        }
